@@ -90,6 +90,7 @@
 #include <sys/types.h>
 #include <stdio.h>
 #include <signal.h>
+#include <ctype.h>
 #include "libpbs.h"
 #include "server_limits.h"
 #include "list_link.h"
@@ -131,6 +132,9 @@ static void post_job_delete_nanny A_((struct work_task *));
 
 struct work_task *apply_job_delete_nanny A_((struct job *, int));
 int has_job_delete_nanny A_((struct job *));
+#ifdef ENABLE_BLCR
+void change_restart_comment_if_needed A_((struct job *));
+#endif
 
 /* Private Data Items */
 
@@ -519,6 +523,10 @@ jump:
     {
     /* job has restart file at mom, do end job processing */
 
+#ifdef ENABLE_BLCR
+    change_restart_comment_if_needed(pjob);
+#endif
+    
     svr_setjobstate(pjob, JOB_STATE_EXITING, JOB_SUBSTATE_EXITING);
 
     pjob->ji_momhandle = -1;
@@ -557,6 +565,51 @@ jump:
 
 
 
+#ifdef ENABLE_BLCR
+/*
+ * change_restart_comment_if_needed - If job has restarted then the comment
+ * attribute is used in on_job_exit() to reque/hold job on failure.
+ * If we are deleting then we change the first charcter to lower case so
+ * it does normal processing in on_job_exit().
+ */
+
+void change_restart_comment_if_needed(
+
+  struct job *pjob)
+
+  {
+  if (pjob->ji_wattr[(int)JOB_ATR_start_count].at_val.at_long > 1)
+    {
+      char *token1 = NULL;
+      char *token2 = NULL;
+      char commentMsg[25];
+      char *ptr;
+      
+      strncpy(commentMsg, pjob->ji_wattr[(int)JOB_ATR_Comment].at_val.at_str, 24);
+      
+      token1 = strtok(commentMsg," ");
+      if (token1 != NULL)
+        token2 = strtok(NULL," ");
+      
+      if ((token2 != NULL) && 
+        ((memcmp(token2,"failure",7) == 0) || (memcmp(token2,"restarted",9) == 0)))
+        {
+        ptr = pjob->ji_wattr[(int)JOB_ATR_Comment].at_val.at_str;
+        if (isupper(*ptr))
+          {
+            *ptr = tolower(*ptr);
+            pjob->ji_wattr[(int)JOB_ATR_Comment].at_flags |= ATR_VFLAG_SET;
+            pjob->ji_modified = 1;
+          }
+        }
+    }
+
+  return;
+  }
+#endif
+    
+
+ 
 
 
 /*
